syntax = "proto3";

option go_package = "github.com/MeibisuX673/grpc/server/proto/infoDirectory";

service InfoDirectory{
  rpc InfoDir (PathRequest) returns (DirInfoResponse){}
  rpc InfoDirStreamClient (stream PathRequest) returns(DirInfoStreamClientResponse){}
  rpc InfoDirStreamAll (stream PathRequest) returns(stream DirInfoResponse){}
}

message FileInfo {
  string name = 1;
  int64 size = 2;
}

message DirInfoResponse{
  int64 size = 3;
  repeated FileInfo files = 4;
  repeated DirInfo directories = 5;
  string path = 2;
}

message DirInfo {
  string name = 6;
  int64 size = 7;
}

message PathRequest {
  string path = 3;
}

message DirInfoStreamClientResponse{
  repeated DirInfoResponse directoriesInfo = 1;
}
